# GraphAlgo_RISC_V

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: betweenness_centrality.h  graph_algorithms.h  ktruss.h  matrix.h  matrix_la.h  matrix_utils.h  triangle_counting.h
src/: betweenness_centrality.cpp  graph_algorithms.cpp  ktruss.cpp  main.cpp  triangle_counting.cpp
toolchains/: riscv64-1p0-gcc-f16.toolchain.cmake
